# HydraChess

./: .gitignore  CMakeLists.txt  README.md  config.hpp  main.cpp  search.cpp  search.hpp
libchess/include/: Move.h  Piece copy.h  UCIService.h
src/: config.hpp  dataset.hpp  main.cpp  neural.hpp  search.cpp  search.hpp  serialize.cpp  serialize.hpp  train.cpp  train.hpp
src/libchess/: CMakeLists.txt
src/libchess/include/: Lookups.h
src/libchess/include/Position/: MoveGeneration.h  Utilities.h
src/misc/: npy-to-csv.py  pgn-to-csv.py  requirements.txt
